crates/sourcepawn-studio/tests/text_document/hover/snapshots/main__text_document__hover__functions__function_3.snap
---
source: crates/sourcepawn-studio/tests/text_document/hover/functions.rs
assertion_line: 37
expression: "hover(r#\"\n%! main.sp\n/**\n * The foo function.\n * @param bar The bar parameter.\n *            It is useful.\n * @param baz The baz parameter.\n */\nvoid foo(int bar, int baz){}\n              |\n              ^\n\"#)"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```sourcepawn\nint bar;\n```\n\n---\n\nThe bar parameter.\nIt is useful."
  },
  "range": {
    "start": {
      "line": 6,
      "character": 13
    },
    "end": {
      "line": 6,
      "character": 16
    }
  },
  "actions": []
}
