crates/sourcepawn-studio/tests/text_document/hover/snapshots/main__text_document__hover__functions__function_4.snap
---
source: crates/sourcepawn-studio/tests/text_document/hover/functions.rs
assertion_line: 55
expression: "hover(r#\"\n%! main.sp\n/**\n * The foo function.\n * @param bar The bar parameter.\n *            It is useful.\n * @param baz The baz parameter.\n */\nvoid foo(int bar,\n      |\n      ^\n         int baz){}\n\"#)"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```sourcepawn\nvoid foo(int bar,\n         int baz)\n```\n\n---\n\nThe foo function.\n\n_@param_ `bar` — >The bar parameter.\nIt is useful.\n\n_@param_ `baz` — >The baz parameter."
  },
  "range": {
    "start": {
      "line": 6,
      "character": 5
    },
    "end": {
      "line": 6,
      "character": 8
    }
  },
  "actions": []
}
